Adding some context and info on py4j

--- a/BayesBootstrapMLE1.ipynb
+++ b/BayesBootstrapMLE1.ipynb
@@ -1,6 +1,67 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bayes, Bootstrap, MLE & All That\n",
+    "-----\n",
+    "\n",
+    "In this post I want to go back to the basics of statistics, but from an advanced point of view both from a theoretical point of view and technical point of view. The point is go back to the basics of estimating a single parameter value and then quantifying the uncertantity in the estimate using variou methods. In general I will take three approaches to this two of which are [frequentist](https://en.wikipedia.org/wiki/Frequentist_inference) and one that is [Bayesian](https://en.wikipedia.org/wiki/Bayesian_statistics). I admit, Im not as familar with Bayesian methods and therefore sticking to a simple example of estimating a single parameter. I don't believe one approach to statistics is inherently better than the other, but have found so-called frequentist for me to be easier to understand, easier to implement and additionally found Fisherian approaches satisfying from a theoretical point of view.\n",
+    "\n",
+    "The title for this post is inspired by [Div, Grad, Curl & All That](https://www.google.com/books/edition/_/sembQgAACAAJ?hl=en) which I used as a undergraduate to help learn vector calculus.\n",
+    "\n",
+    "\n",
+    "## 1. Using Poisson Distribution Written In Scala with Py4J\n",
+    "---------------\n",
+    "\n",
+    "The first thing we need is data and for that purposes I wrote a [Poisson distribution in Scala](https://github.com/mdh266/PoissonDistributionInScala). The Poisson distribution is a probability distribution for a random variable $y$ that represents some count phenomena, i.e. a number of non-zero integer occurences in some fixed time frame.  For example the number of trains passing through a station per day or the number of customers that visit a website per hour are governed by Poisson distribution. The disibution is,\n",
+    "\n",
+    "$$ p(y \\, = \\, k)  \\; = \\; \\frac{\\lambda^{k} e^{-\\lambda} }{k!} $$\n",
+    "\n",
+    "The parameter $\\lambda$ is the rate variable, i.e. the true number of customers \n",
+    "\n",
+    "But why did I write my distribution in Scala? Well, I like Scala and enjoyed the challenge of writing a Poisson distribution using a functional approach. I also wanted to learn more about how to use [Py4J](https://www.py4j.org/) which can be used to work with functions and objects in the JVM from Python. [Apache Spark](https://spark.apache.org/) actually uses Py4J in PySpark to write Python wrappers for Scala code. I've used both PySpark and Spark in Scala and this gave me an opportunity to understand how PySpark works better.\n",
+    "\n",
+    "The first was to create the Poisson class as I did this [project](https://github.com/mdh266/PoissonDistributionInScala), however, one key difference is the return value of any public value needs to be Java object. Specifically the [sample](https://github.com/mdh266/BayesBootstrapMLE/blob/main/src/main/scala/Poisson.scala) method needs to return a Java List ([java.util.List[Int]](https://www.javatpoint.com/java-list) of integers. I originally tried returning a [Scala List](https://www.scala-lang.org/api/current/scala/collection/immutable/List.html) which worked fine in pure Scala, but when Py4J was not able to serialize this object so well and Python type of returned list was \"Java Object\".\n",
+    "\n",
+    "In order to use this class from Python we need to do three things from the Scala point of view:\n",
+    "\n",
+    "1. Create a [Gateway Server](https://www.py4j.org/_static/javadoc/index.html?py4j/GatewayServer.html)\n",
+    "2. Create a class entrypoint to allow for setting object attributes outside of the constructor\n",
+    "3. Package the code as a jar using a build tool such as [Maven](https://maven.apache.org/) or SBT(https://www.scala-sbt.org/).\n",
+    "\n",
+    "\n",
+    "The first step is pretty straight forward to from the [Py4J Documentation](https://www.py4j.org/getting_started.html) and is in the [Main.Scala](https://github.com/mdh266/BayesBootstrapMLE/blob/main/src/main/scala/Main.scala) object:\n",
+    "\n",
+    "    import py4j.GatewayServer\n",
+    "\n",
+    "    object Main {\n",
+    "        def main(args: Array[String]) = {\n",
+    "            val server = new GatewayServer(new PoissonEntryPoint())\n",
+    "            server.start()\n",
+    "            System.out.println(\"Gateway Server Started\")\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "The GatewayServer doesn't really offer a way for us to pass the $\\lambda$ value from [Python](https://www.py4j.org/getting_started.html#writing-the-python-program) to the Poisson constructor. So we create a [PoissonEntryPoint](https://github.com/mdh266/BayesBootstrapMLE/blob/main/src/main/scala/PoissonEntryPoint.scala) case class:\n",
+    "\n",
+    "    case class PoissonEntryPoint() {\n",
+    "\n",
+    "        var p = new PoissonDistribution()\n",
+    "\n",
+    "        def Poisson(lambda : Double) : PoissonDistribution = {\n",
+    "            p.setLambda(lambda)\n",
+    "            p\n",
+    "        }\n",
+    "\n",
+    "\n",
+    "    }\n",
+    "\n",
+    "The point of this class is simply to be able to create a Poisson class instance after starting Web"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -15,6 +76,163 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "py4j.java_gateway.JavaObject"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(app)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Poisson',\n",
+       " 'apply',\n",
+       " 'canEqual',\n",
+       " 'copy',\n",
+       " 'equals',\n",
+       " 'getClass',\n",
+       " 'hashCode',\n",
+       " 'notify',\n",
+       " 'notifyAll',\n",
+       " 'p',\n",
+       " 'p_$eq',\n",
+       " 'productArity',\n",
+       " 'productElement',\n",
+       " 'productIterator',\n",
+       " 'productPrefix',\n",
+       " 'toString',\n",
+       " 'unapply',\n",
+       " 'wait']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(app)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can then create a Poisson class instance:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p1 = app.Poisson(3.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "py4j.java_gateway.JavaObject"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(p1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['$anonfun$cdf$1',\n",
+       " '$anonfun$getSum$1',\n",
+       " '$anonfun$invCDF$1',\n",
+       " '$anonfun$invCDF$2',\n",
+       " '$anonfun$invCDF$3',\n",
+       " '$anonfun$invCDF$4',\n",
+       " '$anonfun$sample$1',\n",
+       " '$anonfun$uniform$1',\n",
+       " '$lessinit$greater$default$1',\n",
+       " 'andThen',\n",
+       " 'apply',\n",
+       " 'apply$default$1',\n",
+       " 'canEqual',\n",
+       " 'cdf',\n",
+       " 'com$github$mdh266$PoissonDistribution$$lambda',\n",
+       " 'compose',\n",
+       " 'copy',\n",
+       " 'copy$default$1',\n",
+       " 'equals',\n",
+       " 'getClass',\n",
+       " 'getLambda',\n",
+       " 'getSum',\n",
+       " 'hashCode',\n",
+       " 'invCDF',\n",
+       " 'lambda$access$0',\n",
+       " 'notify',\n",
+       " 'notifyAll',\n",
+       " 'prob',\n",
+       " 'productArity',\n",
+       " 'productElement',\n",
+       " 'productIterator',\n",
+       " 'productPrefix',\n",
+       " 'sample',\n",
+       " 'setLambda',\n",
+       " 'toString',\n",
+       " 'unapply',\n",
+       " 'uniform',\n",
+       " 'wait']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(p1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -24,24 +242,85 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "create/connect to the Scala object!"
+    "Sampling from the Poisson object returns a Python list.. Py4J can only serialize specific Java objects back to Python which is why I needed to convert to a java.util.List[Int] object "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'p' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-629c68b90efb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'p' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "x = p.sample(10000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lam = sum(x) / len(x)\n",
+    "print(f\"lambda = {lam}\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. The Maximum Likelyhood Estimator \n",
+    "----------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "p = app.Poisson(3.0)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "Sampling from the Poisson object returns a Python list.. Py4J can only serialize specific Java objects back to Python which is why I needed to convert to a java.util.List[Int] object "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -56,12 +335,7 @@
      ]
     }
    ],
-   "source": [
-    "x = p.sample(10000)\n",
-    "\n",
-    "lam = sum(x) / len(x)\n",
-    "print(f\"lambda = {lam}\") "
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -157,6 +431,22 @@
    ],
    "source": [
     "p.getLambda()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Confidence Intervals From The Fisher Information\n",
+    "-------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. The Bootstrap\n",
+    "----------------"
    ]
   }
  ],
