Updating poisson entry point to return independent objects

--- a/BayesBootstrapMLE1.ipynb
+++ b/BayesBootstrapMLE1.ipynb
@@ -48,9 +48,8 @@
     "\n",
     "    case class PoissonEntryPoint() {\n",
     "\n",
-    "        var p = new PoissonDistribution()\n",
-    "\n",
     "        def Poisson(lambda : Double) : PoissonDistribution = {\n",
+    "            var p = new PoissonDistribution()\n",
     "            p.setLambda(lambda)\n",
     "            p\n",
     "        }\n",
@@ -58,12 +57,14 @@
     "\n",
     "    }\n",
     "\n",
-    "The point of this class is simply to be able to create a Poisson class instance after starting Web"
+    "The point of this class is simply to be able to create a Poisson class instance after starting Web\n",
+    "\n",
+    "Note created the PoissonDistribution object within the function and not as attribute of the class."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +86,7 @@
        "py4j.java_gateway.JavaObject"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +123,7 @@
        " 'wait']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,84 +150,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p2 = app.Poisson(4.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "py4j.java_gateway.JavaObject"
+       "4.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(p1)"
+    "p1.getLambda()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['$anonfun$cdf$1',\n",
-       " '$anonfun$getSum$1',\n",
-       " '$anonfun$invCDF$1',\n",
-       " '$anonfun$invCDF$2',\n",
-       " '$anonfun$invCDF$3',\n",
-       " '$anonfun$invCDF$4',\n",
-       " '$anonfun$sample$1',\n",
-       " '$anonfun$uniform$1',\n",
-       " '$lessinit$greater$default$1',\n",
-       " 'andThen',\n",
-       " 'apply',\n",
-       " 'apply$default$1',\n",
-       " 'canEqual',\n",
-       " 'cdf',\n",
-       " 'com$github$mdh266$PoissonDistribution$$lambda',\n",
-       " 'compose',\n",
-       " 'copy',\n",
-       " 'copy$default$1',\n",
-       " 'equals',\n",
-       " 'getClass',\n",
-       " 'getLambda',\n",
-       " 'getSum',\n",
-       " 'hashCode',\n",
-       " 'invCDF',\n",
-       " 'lambda$access$0',\n",
-       " 'notify',\n",
-       " 'notifyAll',\n",
-       " 'prob',\n",
-       " 'productArity',\n",
-       " 'productElement',\n",
-       " 'productIterator',\n",
-       " 'productPrefix',\n",
-       " 'sample',\n",
-       " 'setLambda',\n",
-       " 'toString',\n",
-       " 'unapply',\n",
-       " 'uniform',\n",
-       " 'wait']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dir(p1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -236,7 +189,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dir(p1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -247,30 +202,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'p' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-629c68b90efb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'p' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "x = p.sample(10000)"
+    "x = p1.sample(1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 5, 2]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lambda = 2.987\n"
+     ]
+    }
+   ],
    "source": [
     "lam = sum(x) / len(x)\n",
     "print(f\"lambda = {lam}\") "
@@ -278,10 +249,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1000"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(x)"
+   ]
   },
   {
    "cell_type": "code",
